--- a/es/index.html
+++ b/es/index.html
@@ -52,7 +52,7 @@
                                 <img src="../img/002.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>Artesano</h2>
+                                <h2>ARTESANO</h2>
                                 <h3>Shun Yonemura</h3>
                                 <P>
                                     Nací y crecí en Japón.
