--- a/jp/index.html
+++ b/jp/index.html
@@ -103,8 +103,9 @@
             </div>
             <footer>
                 <p>
-                    All content on this website is for viewing only.<br>
-                    Do NOT re-upload or redistribute it elsewhere.
+                    このウェブサイト内のすべてのコンテンツは、閲覧利用のみを目的に公開しています。
+                <br>
+                    その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
                 </p>
                 © 2025 Shunartesán
             </footer>
