--- a/jp/musicagalega.html
+++ b/jp/musicagalega.html
@@ -11,20 +11,20 @@
                 <header>
                     <a href="./index.html"><h1>SHUNARTESÁN</h1></a>
                     <p>
-                    ガリシアとアイルランドの伝統音楽のためのオカリナ
+                        ガリシアとアイルランドの伝統音楽のためのオカリナ
                     </p>
                 </header>
                 <section id="sec1">
                     <div class="box">
                         <h2>ガリシアとガリシアの音楽について</h2>
-                        <h3>2025.6.20 更新</h3>
+                        <h3>2025.6.21 更新</h3>
                         <p>
-                        原文を抄訳し、再構成したものです。
-                        可能な限りオンラインでアクセスできる出典を明記していますので、参照してください。
+                            原文を抄訳し、再構成したものです。
+                            可能な限りオンラインでアクセスできる出典を明記していますので、参照してください。
                         </p>
                         <p>
-                        このページの内容と構成は、このURLからブラウザ上での閲覧だけを想定したものです。
-                        その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
+                            このページの内容と構成は、このURLからブラウザ上での閲覧だけを想定したものです。
+                            その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
                         </p>
                     </div>
                 </section>
@@ -33,21 +33,33 @@
                         <h2>Aa</h2>
                         <h3>alalá</h3>
                         <p>
-                        ガリシアの民謡。ゆっくりとしたメリスマ式の歌唱で、「アイラララ、アイラララ」あるいは類似の様々な歌詞が頻繁に繰り返される。<br>
-                        [補足：「アイラレロ」などがある。]
+                            ガリシアの民謡。ゆっくりとしたメリスマ式の歌唱で、「アイラララ、アイラララ」あるいは類似の様々な歌詞が頻繁に繰り返される。<br>
+                            [補足：a, i, la, le, lo が組み合わされる。]
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/alalá">
-                        Canto popular galego lento e melismático que remata frecuentemente con ‘ailalala, ailalala’ ou letras baleiras semellantes.
-                        (Diccionario | Real Academia Galega)
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/alalá">
+                            Canto popular galego lento e melismático que remata frecuentemente con ‘ailalala, ailalala’ ou letras baleiras semellantes.
+                            (Diccionario | Real Academia Galega)
                         </a>
                         <h3>alborada</h3>
                         <p>
                             日の出。早朝の行進曲。
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/alborada">
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/alborada">
                             Primeira luz do día.
                             Composición con ritmo de marcha que se toca, principalmente, de mañá cedo e desfilando.
                             (Diccionario | Real Academia Galega)
+                        </a>
+                        <h3>asubío</h3>
+                        <p>
+                            口笛。小さな球体状の気鳴楽器。元来は、植物の殻や種などから作られ、単一の音が鳴る。子供の玩具や、合図・警告のための笛。
+                        </p>
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/asubio">
+                            Acción e efecto de asubiar. 
+                            Pequeno instrumento que serve para asubiar.
+                            (Diccionario | Real Academia Galega)    
+                        </a>
+                        <a class="org" target="_blank" href="https://consellodacultura.gal/asg/instrumentos/os-aerofonos/asubios/">
+                            Os Instrumentos Musicais na Tradición Galega » Asubíos (Consello da Cultura Galega)
                         </a>
                     </div>
                 </section>
@@ -56,26 +68,44 @@
                         <h2>Ff</h2>
                         <h3>foliada</h3>
                         <p>
-                        歌や踊りに興じる夜の宴。集まりに参加し、騒がしく楽しむこと。
+                            歌や踊りに興じる夜の宴。集まりに参加し、騒がしく楽しむこと。
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/foliada">
-                        Reunión nocturna de xente para divertirse, cantar e bailar. Diversión buliciosa en que participa un grupo de persoas.
-                        (Diccionario | Real Academia Galega)
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/foliada">
+                            Reunión nocturna de xente para divertirse, cantar e bailar. Diversión buliciosa en que participa un grupo de persoas.
+                            (Diccionario | Real Academia Galega)
+                        </a>
+                    </div>
+                </section>
+                <section>
+                    <div class="box">
+                        <h2>Gg</h2>
+                        <h3>gaita</h3>
+                        <p>
+                            イベリア半島北西部におけるバグパイプのこと。
+                            地域や時代によって、構造と調性や演奏方法に様々な差異がある。
+                            演奏者によっても異なる。
+                        </p>
+                        <p>
+                            ダブルリードを持つプンテイロ（punteiro）にある指孔を開閉して音階を演奏する。
+                            指孔は8つあり、前に7つ、後ろの上方に1つある。
+                        </p>
+                        <p>
+                            通低音を鳴らす部分は、基本的には1本で、2本か3本の場合もある。
+                            長いものから順に、roncoあるいはroncón、ronquetaあるいはronquillo、chillónあるいはchiónかpiónと呼ばれる。
+                        </p>
+                        <a class="org" href="">
+                        </a>
+                        <h3>gaiteiro / gaiteira</h3>
+                        <p>
+                            ガイタ（gaita）を演奏する人。
+                        </p>
+                        <a class="org" href="https://academia.gal/dicionario/-/termo/gaiteiro">
+                            Persoa que toca a gaita.
+                            (Diccionario | Real Academia Galega)
                         </a>
                     </div>
                 </section>
                 <!--
-                <section>
-                    <div class="box">
-                        <h2></h2>
-                        <h3></h3>
-                        <p>
-
-                        </p>
-                        <a class="org" href="">
-                        </a>
-                    </div>
-                </section>
                 <section>
                     <div class="box">
                         <h2></h2>
@@ -95,20 +125,20 @@
                         <p>
                             脱殼機の順番待ちをする間、粉挽き場で若者たちが集うこと。
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/foliada">
-                        Reunión que facían os mozos no muíño mentres esperaban a quenda da moenda.
-                        (Diccionario | Real Academia Galega)
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/muiñada">
+                            Reunión que facían os mozos no muíño mentres esperaban a quenda da moenda.
+                            (Diccionario | Real Academia Galega)
                         </a>
                         <h3>muiñeira</h3>
                         <p>
-                        ガリシアの伝統舞踊。その舞踊に合わせる音楽。明るく陽気なものが多い。
-                        地域や時代によって、様々な特徴や名称がある。
+                            ガリシアの伝統舞踊。その舞踊に合わせる音楽。明るく陽気なものが多い。
+                            地域や時代によって、様々な特徴や名称がある。
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/foliada">
-                        Persoa que traballa nun muíño. 
-                        Danza tradicional galega, con diversos puntos, que executan unha ou máis parellas soltas. 
-                        Composición musical tradicional, de movemento alegre, ao son da cal se baila a muiñeira. 
-                        (Diccionario | Real Academia Galega)
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/muiñeira">
+                            Persoa que traballa nun muíño. 
+                            Danza tradicional galega, con diversos puntos, que executan unha ou máis parellas soltas. 
+                            Composición musical tradicional, de movemento alegre, ao son da cal se baila a muiñeira. 
+                            (Diccionario | Real Academia Galega)
                         </a>
                         <!--
                         <h4>muiñeira nova</h4>
@@ -116,6 +146,16 @@
                         <h4>muiñeira vella</h4>
                         <P>比較的前の時代もの。一対のペアで踊る。</P>
                         -->
+                        <h3>muiño</h3>
+                        <p>
+                            穀物の脱穀、サトウキビやオリーブの圧搾を行うための装置や場所のこと。
+                        </p>
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/muiño">
+                            Aparello para moer ou para triturar certos produtos, como cereais, olivas, cana de azucre etc. 
+                            Edificio onde está instalado algún destes aparellos. 
+                            Máquina pequena, manual ou eléctrica, para moer ou triturar certos produtos.
+                            (Diccionario | Real Academia Galega)
+                        </a>
                     </div>
                 </section>
                 <section>
@@ -125,7 +165,7 @@
                         <p>
                         ガリシア語で、クリスマスの聖歌のこと。
                         </p>
-                        <a class="org" href="https://academia.gal/dicionario/-/termo/panxoliña">
+                        <a class="org" target="_blank" href="https://academia.gal/dicionario/-/termo/panxoliña">
                         Canción popular de tema relixioso, que se canta polo Nadal.
                         (Diccionario | Real Academia Galega)
                         </a>
@@ -152,9 +192,9 @@
             </div>
             <footer>
                 <p>
-                このウェブサイト内のすべてのコンテンツは、閲覧利用のみを目的に公開しています。
+                    このウェブサイト内のすべてのコンテンツは、閲覧利用のみを目的に公開しています。
                 <br>
-                その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
+                    その他の目的や用途で使用したり、他の場所にアップロードしたりしないでください。
                 </p>
                 © 2025 Shunartesán
             </footer>
