--- a/es/index.html
+++ b/es/index.html
@@ -2,16 +2,16 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>SHUNARTESÁN – Ocarinas Artesanías</title>
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <h1>SHUNARTESÁN</h1>
+                    <h1 class="header">SHUNARTESÁN</h1>
                     <p>
-                        Ocarina artesanía para la música tradicional de Galicia e Irlanda.
+                        Ocarinas artesanías para la música tradicional de Galicia e Irlanda.
                     </p>
                 </header>
                 <div class="langselect">
@@ -27,8 +27,8 @@
                                 <img src="../img/001.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>PRODUCTOS</h2>
-                                <h3>Incluye una nota adicional en el registro agudo</h3>
+                                <div class="cardtitle">PRODUCTOS</div>
+                                <h2>Incluye una nota adicional en el registro agudo</h2>
                                 <p>
                                     La estructura está diseñada inspirándose en el artista español Mo. Manuel Barreiro (Paparolo).
                                     Una cámara y un orificio doble para el meñique derecho.
@@ -52,8 +52,8 @@
                                 <img src="../img/002.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>ARTESANO</h2>
-                                <h3>Shun Yonemura</h3>
+                                <div class="cardtitle">ARTESANO</div>
+                                <h2>Shun Yonemura</h2>
                                 <P>
                                     Nací y crecí en Japón.
                                     Conocí la música gallega en 2006 y viajé a Galicia por primera vez en 2010.
@@ -61,7 +61,9 @@
                                     Este encuentro marcó el inicio de mi exploración de la estructura e interpretación de la ocarina, con su guía y apoyo.
                                     Por la misma época, investigué la historia, la cultura y la música de Galicia durante mis estudios de posgrado.                                </P>
                                 <p>
+                                <p>
                                     Desde 2024, he estado produciendo ocarinas, con demostraciones acompañadas de filmaciones y grabaciones propias.                                </p>
+                                </p>
                             </div>
                             <div class="brbtn">
                                 <a href="maker.html" class="btn">▶︎ LEER MÁS</a> 
