--- a/es/maker.html
+++ b/es/maker.html
@@ -2,16 +2,18 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>Artesano – SHUNARTESÁN</title>
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <a href="index.html"><h1>SHUNARTESÁN</h1></a>
+                    <div class="header">
+                        <a href="index.html">SHUNARTESÁN</a>
+                    </div>
                     <p>
-                        Ocarina artesanía para la música gallega y irlandesa
+                        Ocarinas artesanías para la música gallega y irlandesa
                     </p>
                 </header>
                 <div class="langselect">
@@ -24,8 +26,8 @@
                 </div>
                 <section> 
                     <div class="box">
-                        <h2>Artesano</h2>
-                        <h3>Shun Yonemura</h3>
+                        <h1>ARTESANO</h1>
+                        <h2>Shun Yonemura</h2>
                         <p>
                         Nacida en Kanagawa en 1989 y criada en Tokio.
                         Durante su infancia asistió a clases de violín,
@@ -51,7 +53,9 @@
                 </section>
                 <section id="sec2">
                     <div class="box">
-                        <h2>A TODOS LOS MÚSICOS DE VIENTO</h2>
+                        <div class="cardtitle">
+                            <h2>A TODOS LOS MÚSICOS DE VIENTO</h2>
+                        </div>
                         <p>
                             No solo toco la ocarina; también tengo experiencia con diversos instrumentos de viento, como la gaita galega, la requinta, la flauta dulce, la armónica, el tin whistle, el low whistle, la flauta irlandesa y más.
                             Admiro profundamente la maestría musical y técnica de quienes tocan estos instrumentos.
