--- a/es/product.html
+++ b/es/product.html
@@ -2,14 +2,16 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>Productos – SHUNARTESÁN</title>
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <a href="index.html"><h1>SHUNARTESÁN</h1></a>
+                    <div class="header">
+                        <a href="index.html">SHUNARTESÁN</a>
+                    </div>
                     <p>
                         Ocarinas artesanías para la música tradicional de Galicia e Irlanda.
                     </p>
@@ -17,14 +19,10 @@
                 <div class="langselect">
                     <a href="../product.html">English</a> |
                     <a href="./product.html"><b><u>español</u></b></a>
-                    <!--
-                     |
-                    <a href="../jp/product.html"><b><u>日本語</u></b></a>
-                    -->
                 </div>
                 <section>    
                     <div class="box">
-                        <h2>PRODUCTO</h2>
+                        <div class="cardtitle"><h1>PRODUCTO</h1></div>
                         <p>
                             La estructura está diseñada inspirándose en un escultor gallego Manuel Barreiro "Paparolo".
                             Cuenta con una cámara y un agujero doble para el meñique derecho.
@@ -49,7 +47,7 @@
                         </p>
                         <div class="flexbox">
                             <div>
-                                <h3>ORIGINAL: 11 agujeros y 13 notas</h3>
+                                <h2>ORIGINAL: 11 agujeros y 13 notas</h2>
                                 <p>
                                     El registro agudo gana una nota extra sin necesidad de añadir agujeros. Esto permite interpretar más piezas irlandesas que antes requerían doble cámara.
                                 </p>
@@ -81,7 +79,7 @@
                                 </p>
                             </div>    
                             <div>
-                                <h3>BASICO: 11 agujeros y 12 notas</h3>
+                                <h2>BASICO: 11 agujeros y 12 notas</h2>
                                 <p>
                                     Se puede tocar con la digitación común. 
                                     Si el artículo no está disponible, es posible que debas esperar entre uno y varios meses, o incluso más, dependiendo de la situación.                                </p>
