--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>SHUNARTESÁN – Handmade Ocarinas</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <h1>SHUNARTESÁN</h1>
+                    <h1 class="header">SHUNARTESÁN</h1>
                     <p>
-                        Handmade ocarina for the traditional music of Galicia and Ireland.
+                        Handmade ocarinas for the traditional music of Galicia and Ireland.
                     </p>
                 </header>
                 <div class="langselect">
@@ -26,8 +26,8 @@
                                 <img src="./img/001.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>PRODUCT</h2>
-                                <h3>One extra note in the upper range</h3>
+                                <div class="cardtitle">PRODUCTS</div>
+                                <h2>One extra note in the upper range</h2>
                                 <p>
                                     The structure is designed inspiring by a Spanish artist, 
                                     Mo. Manuel Barreiro "Paparolo".  
@@ -59,8 +59,8 @@
                                 <img src="./img/002.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>MAKER</h2>
-                                <h3>Shun Yonemura</h3>
+                                <div class="cardtitle">MAKER</div>
+                                <h2>Shun Yonemura</h2>
                                 <P>
                                     Born and raised in Japan. 
                                     Encountered Galician music in 2006,
