--- a/jp/index.html
+++ b/jp/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>SHUNARTESÁN – Handmade Ocarinas</title>
         <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <h1>SHUNARTESÁN</h1>
+                    <h1 class="header">SHUNARTESÁN</h1>
                     <p>
                         ガリシアとアイルランドの伝統音楽のためのオカリナ
                     </p>
@@ -26,8 +26,8 @@
                                 <img src="../img/001.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>PRODUCT</h2>
-                                <h3>日本国内の各種販売サービスは利用していません</h3>
+                                <div class="cardtitle">PRODUCTS</div>
+                                <h2>日本国内の各種販売サービスは利用していません</h2>
                                 <p>
                                     私のオカリナは、音色や吹奏感において、日本で一般的に好まれる傾向と異なります。
                                     ミスマッチを防ぐために、日本国内での積極的な販売は行っていません。
@@ -65,8 +65,8 @@
                                 <img src="../img/002.jpg">
                             </figure>
                             <div class="cardtext">
-                                <h2>MAKER</h2>
-                                <h3>米村 俊（よねむら しゅん）</h3>
+                                <div class="cardtitle">MAKER</div>
+                                <h2>米村 俊（よねむら しゅん）</h2>
                                 <p>1989年生まれ、東京都出身。
                                     2006年にガリシア音楽を知り、2014年から師匠であるマヌエル・バレイロ氏のパパローロ・オカリナを演奏しています。
                                     2024年からオリジナルのオカリナを制作しています。
