--- a/maker.html
+++ b/maker.html
@@ -2,14 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>Maker – SHUNARTESÁN</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <a href="index.html"><h1>SHUNARTESÁN</h1></a>
+                    <div class="header">
+                        <a href="index.html">SHUNARTESÁN</a>
+                    </div>
                     <p>
                         Handmade ocarina for the traditional music of Galicia and Ireland.
                     </p>
@@ -17,15 +19,11 @@
                 <div class="langselect">
                     <a href="./index.html"><b><u>English</u></b></a> |
                     <a href="./es/maker.html">español</a>
-                    <!--
-                     |
-                    <a href="./jp/maker.html">日本語</a>
-                    -->
                 </div>
                 <section id="sec1">
                     <div class="box">
-                        <h2>MAKER</h2>
-                        <h3>Shun Yonemura</h3>
+                        <div class="cardtitle"><h1>MAKER</h1></div>
+                        <h2>Shun Yonemura</h2>
                         <p>
                             Born in Kanagawa in 1989 and grew up in Tokyo.
                             I learned the violin in childhood, 
@@ -60,7 +58,7 @@
                 </section>
                 <section id="sec2">
                     <div class="box">
-                        <h2>TO ALL WIND PLAYERS</h2>
+                        <div class="cardtitle">TO ALL WIND PLAYERS</div>
                         <p>
                             I don't just play the ocarina—I also have experience with a variety of wind instruments, 
                             including the gaita galega, requinta, recorder, harmonica, tin whistle, low whistle, Irlish flute, and more.
