--- a/product.html
+++ b/product.html
@@ -2,14 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SHUNARTESÁN</title>
+        <title>Products – SHUNARTESÁN</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <main>
             <div class="container">
                 <header>
-                    <a href="index.html"><h1>SHUNARTESÁN</h1></a>
+                    <div class="header">
+                        <a href="index.html">SHUNARTESÁN</a>
+                    </div>
                     <p>
                         Handmade ocarinas for the traditional music of Galicia and Ireland.
                     </p>
@@ -17,17 +19,13 @@
                 <div class="langselect">
                     <a href="./product.html"><b><u>English</u></b></a> |
                     <a href="./es/product.html">español</a>
-                    <!--
-                     |
-                    <a href="./jp/product.html">日本語</a>
-                    -->
                 </div>
                 <section id="sec1">
                     <div class="box">
-                        <h2>PRODUCT</h2>
+                        <div class="cardtitle"><h1>PRODUCT</h1></div>
                         <p>
                             The structure is designed inspiring by a Spanish artist, 
-                            Mo. Manuel Barreiro (Paparolo).  
+                            Maestro. Manuel Barreiro "Paparolo".  
                             A single-chamber and a doble-hole for the right pinky. 
                             It enables rythmic playing with chromatic and also diatonic scales, 
                             for Muiñeira, Xota, Reel and Jig.  
@@ -54,8 +52,9 @@
                             <u><b><a href="https://www.etsy.com/jp/shop/shunartesan">Etsy</a></b></u>.
                         </p>
                         <div class="flexbox">
+                            <section id="sec01">
                             <div>
-                                <h3>ORIGINAL: 11 holes, 13 notes</h3>
+                                <h2>ORIGINAL: 11 holes, 13 notes</h2>
                                 <p>
                                     The range is one note wider in the higher register 
                                     without adding extra holes.  
@@ -86,12 +85,12 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <p>
-                                    <img class="fingering" src="./img/001.png">
-                                </p>
-                            </div>    
+                                <img class="fingering" src="./img/001.png">
+                            </div>
+                            </section>
+                            <section id="sec02">  
                             <div>
-                                <h3>BASIC: 11 holes, 12 notes</h3>
+                                <h2>BASIC: 11 holes, 12 notes</h2>
                                 <p>
                                     It can be played with the common fingering.<br>
                                     If the item is out of stock, 
@@ -205,6 +204,7 @@
                                     </tbody>
                                 </table>
                             </div>
+                            </section>  
                         </div>
                     </div>
                 </section>
