--- a/jp/musicagalega.html
+++ b/jp/musicagalega.html
@@ -56,7 +56,7 @@
                             (Diccionario | Real Academia Galega)    
                         </a>
                         <a class="link01" target="_blank" href="https://youtu.be/BUD4xZi8o0Q?si=8IBqXiuNScxZEJYI">
-                            Boneca Lareta (2015) <i>A Última Viaxe do Afiador</i>  
+                            Boneca Lareta (2015) <i>A Última Viaxe do Afiador</i>  
                         </a>
                         <div class="ref">
                             <a class="link02" href="#chifre">
@@ -95,6 +95,15 @@
                         </a>
                         <a class="link01" target="_blank" href="https://consellodacultura.gal/asg/instrumentos/os-aerofonos/asubios/">
                             Os Instrumentos Musicais na Tradición Galega » Asubíos (Consello da Cultura Galega)
+                        </a>
+                        <h2 class="augardente">augardente</h2>
+                        <p class="ipa">[awɣaɾˈðente̝]アウガルデンテ</p>
+                        <p class="acp">
+                            蒸留酒。
+                        </p>
+                        <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/augardente">
+                            Bebida alcohólica obtida ao destilar o bagazo ou outros produtos como froitas ou cereais, despois de fermentaren.
+                            (Diccionario | Real Academia Galega)
                         </a>
                     </div>
                 </section>
@@ -164,7 +173,32 @@
                         </div>
                     </div>
                 </section>
-                </section>
+            </section>
+            <section id="e">
+                <div class="box">
+                    <div class="cardtitle">Ee</div>
+                    <h2 class="esmorga">esmorga</h2>
+                    <p class="ipa">[esˈmɔɾɣa̝]エスモルガ</p>
+                    <p class="acp">
+                        騒がしく過大に楽しむこと。たくさんの友人と囲む豪華なごちそうのこと。
+                    </p>
+                    <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/esmorga">
+                        Diversión buliciosa e esaxerada. Comida abundante que toman varios amigos xuntos.
+                        (Diccionario | Real Academia Galega)
+                    </a>
+                    <div class="ind1">
+                        <h2>『A esmorga』</h2>
+                        <p class="acp">
+                            1959年にオウレンセ出身の作家Eduardo Blanco Amorがブエノスアイレスで発表した小説。
+                            ガリシア語文学を代表する作品のひとつである。
+                        </p>
+                        <a class="link01" target="_blank" href="https://ourense.gal/turismo/en/agrupacion/ruta-de-a-esmorga/">
+                            A Esmorga (On A Bender) Literary Route – Turismo de Ourense
+                        </a>
+                    </div>
+                </div>
+            </section>
+            </section>
                 <section id="f">
                     <div class="box">
                         <div class="cardtitle">Ff</div>
@@ -254,7 +288,9 @@
                             メロディーパートも2類程度で、このようなムイニェイラは原始的なものとみなされている。
                             時代が進むと、音楽学的な発展とともに器楽曲としての性質が強くなった。
                             ガイタなどの楽器の演奏が伴われるようになり、メロディーを構成するパート数も増えた。
+                            <!--
                             大人数でのフォーメーションダンスも見られるようになった。
+                            -->
                             この違いに言及し、あえて分ける場合、それぞれ「<b>muiñeira vella</b>」（古いムイニェイラ）と「<b>muiñeira nova</b>」（新しいムイニェイラ）と呼んで区別する。
                         </p>
                         <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/muiñeira">
@@ -265,6 +301,10 @@
                         </a>
                         <div class="ref">
                             <a class="link02" href="#pandeireta">pandeireta</a> 
+                        </div>
+                        <div class="ref">
+                            <a class="link02" href="#carballesa">carballesa</a> 
+                            <a class="link02" href="#ribeirana">ribeirana</a> 
                         </div>
                         <h2>muiño</h2>
                         <p class="ipa">[-]ムイーニョ</p>
@@ -347,6 +387,28 @@
                         <a class="link01" target="_blank" href="https://academia.gal/dicionario/-/termo/panxoliña">
                         Canción popular de tema relixioso, que se canta polo Nadal.
                         (Diccionario | Real Academia Galega)
+                        </a>
+                    </div>
+                </section>
+                <section>
+                    <div class="box">
+                        <div class="cardtitle">Qq</div>
+                        <h2 class="queimada">queimada</h2>
+                        <p class="ipa">[kejˈmaða̝]ケイマーダ</p>
+                        <p class=acp>
+                            陶器の器に蒸留酒と砂糖を入れて着火し、アルコールを飛ばした飲み物。
+                            コーヒー豆や柑橘を加える場合もある。
+                            古代の神秘的伝説と結び付けられる傾向にあるが、史実上矛盾があるため関連は否定されている。
+                            実際には、20世紀後半に儀式的演出が追加されて商業的な成功を収め、定着したものである。
+                            文化人や政治家の推奨も普及の一助となった。
+                        </p>
+                        <a class="link01" href="https://academia.gal/dicionario/-/termo/queimada">
+                            Bebida característica de Galicia que se fai queimando augardente e azucre ata que se consome gran parte do alcohol, á que se lle poden engadir outros ingredientes, como grans de café, anacos de froita etc.
+                            (Diccionario | Real Academia Galega)
+                        </a>
+                        <a class="link01" href="https://www.elprogreso.es/articulo/gastronomia/queimada-gallega-ritual-historia/202404182123161746412.html">
+                            La destilación de bebidas alcohólicas, a pesar de conocerse desde hace milenios para la elaboración de perfumes, no se popularizó en Galicia hasta bien entrada la segunda mitad del siglo XIX, desmontando así el mito de su origen ancestral.
+                            (El ritual de la queimada gallega: historia, receta y conjuro mágico. Galicia Gastronómica. El Progreso de Lugo)
                         </a>
                     </div>
                 </section>
